Finishing CLI and binary